--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -68,40 +68,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "8b982e08-42df-4937-848f-c6315d797c7a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dftest= df[:][:1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "f84f31f4-2013-468f-a3e9-e85828184052",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[10131114, 'HEURE', 5377, 'Wallonie', 'Namur', 'HOUSE', 'HOUSE',\n",
-       "        'residential_sale', 100000, 2, 150, 'NOT_INSTALLED',\n",
-       "        'NOT_INSTALLED', 0, 0, 1, -1, -1, -1, 198, 3, -1, 'TO_RENOVATE']],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dftest.values"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "6076c16a-3efa-4c19-a697-bfc4b27c1747",
    "metadata": {
@@ -214,6 +180,25 @@
     "    dic_zip_value[x] = xxx[i]\n",
     "df['zip_code_ratio'] = df['zip_code_xx']\n",
     "df['zip_code_ratio'] = df['zip_code_ratio'].map(dic_zip_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f38c3c38-6f0d-480e-97b7-11df6fa47cfd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test_api = df[['id',\n",
+    "                 'surface',\n",
+    "                 'type_of_property',\n",
+    "                 'number_of_bedrooms',\n",
+    "                 'postal_code',\n",
+    "                 'land_surface',\n",
+    "                 'garden',\n",
+    "                 'garden_surface',\n",
+    "                  \n",
+    "                 ]]"
    ]
   },
   {
@@ -1156,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "id": "51d7d47e-1a99-4921-8b33-777431832ab7",
    "metadata": {},
    "outputs": [],
@@ -1178,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "id": "723740b3-a43d-4a21-9dd2-3ece8151b55f",
    "metadata": {},
    "outputs": [],
@@ -1188,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "id": "a4709417-cc12-4193-9b2b-db3731070a4d",
    "metadata": {},
    "outputs": [],
@@ -1223,10 +1208,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "daebad31-fc27-44c9-b45c-9c5186cb9cb8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (14203027.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn [37], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    def predict(clean_data):\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
    "source": [
     "def predict(clean_data):"
    ]
